fix(table): fix rtl and bug with filter overflow

--- a/src/components/Table/TableHead/_table-head.scss
+++ b/src/components/Table/TableHead/_table-head.scss
@@ -11,7 +11,6 @@
   .#{$prefix}--table-header-label {
     display: flex;
     user-select: none;
-    overflow: hidden;
   }
   .column-header__btn {
     margin: 0 $spacing-05 $spacing-05 0;
@@ -69,5 +68,20 @@
 
   .#{$iot-prefix}--table-header-row-action-column {
     min-width: 40px;
+  }
+}
+
+.#{$iot-prefix}--filterheader-combo .#{$prefix}--list-box__field {
+  overflow: visible;
+}
+
+html[dir='rtl'] {
+  .#{$iot-prefix}--column-header {
+    padding: calc(0.375rem - 3px) $spacing-05 calc(0.375rem - 3px) 3.75rem;
+
+    svg {
+      left: $spacing-05;
+      right: auto;
+    }
   }
 }
